# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- Adicionado uma referência ao comando /itens ao receber um drop de item mágico.

## [5.2.6] - 2023-04-19

### Fixed

- Resolvido um bug onde partidas vitoriosas do BlackJack não dariam Lucro, apenas devolveriam as estrelinhas apostadas.

## [5.2.5] - 2023-04-18

### Added

- Usuários banidos agora podem ver desde quando estão banidos ao usar comandos. Não acho que alguém queira testar isso, mas garanto que está funcionando, e está bem legal ;)

### Changed

- Todos comandos de ação possuem um limite de 300 caracteres no campo `motivo`.
- O comando `/perfil` foi acelerado ainda mais caso você não possua nenhuma mudança nele nos ultimos 30 minutos. 

## [5.2.4] - 2023-04-12

### Changed

- O campo `motivo` dos comandos de ação agora possuem um limite máximo de caracteres.

## [5.2.3] - 2023-04-08

### Fixed

- Resolvido erro do blackjack onde não era possível jogar mais de uma partida ao mesmo tempo.
- Resolvido erros do Trisal quando um usuário não era citado.
- Correção parcial para reduzir as causas de imagens de API OFF em comandos de ação.

## [5.2.2] - 2023-04-05

### Changed

- O comando /perfil está muito mais rápido quando seu perfil não mudou nos últimos 30 minutos.

### Fixed

- A Badge de 100 votos voltou a ser adicionada aos perfis com mais de 100 votos. Caso você tenha mais de 100 votos na Menhera, a Badge deve aparecer em seu próximo voto.
- Resolvido a inconsistência de votos, onde as mensagens que a Menhera mandavam eram sempre sobre um voto a menos do que a verdadeira contagem de votos.

## [5.2.1] - 2023-04-02

### Added

- Criado uma nova Badge para usuários que reportam bugs de alto impacto da Menhera.

### Fixed
